--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,11 @@
                                     </div>
                                 </div>
                             </li>
+                            <li class="nav-item" id="mobile-logout" hidden>
+                                <a href="{{ url_for('auth.logout') }}" class="nav-link">
+                                    <i class="fas fa-sign-out-alt"></i> Logout
+                                </a>
+                            </li>
                         {% endif %}
                     </ul>
                 </div>
