--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="nav-item" id="mobile-logout" hidden>
+                            <li class="nav-item" id="mobile-logout">
                                 <a href="{{ url_for('auth.logout') }}" class="nav-link">
                                     <i class="fas fa-sign-out-alt"></i> Logout
                                 </a>
