--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -327,6 +327,10 @@ main.container {
     margin-top: 2rem;
 }
 
+#mobile-logout {
+    display: none;
+}
+
 .legend {
     text-align: center;
     margin-bottom: 10px;
